crates/hydracache-db/tests/policy/fail_missing_key_source.stderr
error: query_cache_policy requires one key source: key, collection, or entity + id
 --> tests/policy/fail_missing_key_source.rs:4:19
  |
4 |     let _policy = query_cache_policy!(name = "load-user");
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `query_cache_policy` (in Nightly builds, run with -Z macro-backtrace for more info)
